# Bof

./: .gitignore  Bof.sln  CMakeLists.txt  CleanBuild.bat  CompileShaders.bat  GenerateProjects.bat  README.md  RunBofGameExeRetail.bat  StartVisualStudioSolution.bat  compile_shaders.bat  generate_projects.bat  imgui.ini  runBofGameExe.bat
BofEngine/: CMakeLists.txt
BofEngine/components/: GoodComponents.h  Simulation.h
BofEngine/core/: BofEngine.cpp  BofEngine.h  Core.cpp  Core.h
BofEngine/utils/: AABB.hpp  BofAsserts.h  BofLog.h  GoodSave.h  HashSortedVector.h  Helpers.h  Timer.h  Utils.h  VulkanHelpers.h
BofEngine/vulkanhelpers/: VulkanHelpers.h
BofGame/: BofGame.cpp  CMakeLists.txt
BofGame2/: BofGame2.cpp  CMakeLists.txt
Examples/: CMakeLists.txt  DescriptorSetsExample.cpp  DescriptorSetsExample.h  DynamicUniformBufferExample.cpp  DynamicUniformBufferExample.h  PipelinesExample.h  PipelinesExamples.cpp  Triangle.cpp  Triangle.h  VulkanAndroid.cpp  VulkanBuffer.cpp  VulkanDebug.cpp  VulkanDevice.cpp  VulkanFrameBuffer.hpp  VulkanHeightmap.hpp  VulkanInitializers.hpp  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTools.cpp  VulkanUIOverlay.cpp  VulkanglTFModel.cpp  VulkanglTFModel.h  benchmark.hpp  camera.hpp
data/: whack.json
data/Shaders/: base.vert  compileshaders.bat  compileshaders.py  phong.frag  phong.frag.spv  phong.vert  phong.vert.spv
deprecated/testcomponents/: CrappyComp.cpp  CrappyComp.h  TestGoodComponents.cpp  TestGoodComponents.h
shaders/: shader.frag
src/BofEngine/: BofEngine.h  CMakeLists.txt  Core.cpp  Core.h  EntryPoint.h
src/BofEngine/core/: Core.h
src/BofEngine/testcomponents/: TestGoodComponents.cpp  ZozoComp.h
src/BofEngine/utils/: BofAsserts.h  GoodSave.h  Timer.h  hashsortedvector.h  ringbuffer.h  vulkanhelpers.h
src/BofGame/: BofGame.cpp  CMakeLists.txt  stdafx.cpp  stdafx.h
vsprojects/: BofEngine.vcxproj  BofEngine.vcxproj.filters  BofGame.vcxproj  BofGame.vcxproj.filters
